Create custom emoji helper

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Content:</strong>
-  <%= emojify @post.content %>
+  <%= insert_emoji_image @post.content %>
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
